[tool.poetry]
name = "deckgenerator"
version = "0.1.0"
description = ""
authors = ["Mikhail Budnikov <msh2481@mail.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
wordfreq = "^3.1.1"
openai = "^1.14.2"
beartype = "^0.17.2"
matplotlib = "^3.8.3"
numpy = "^1.26.4"
tqdm = "^4.66.2"
spacy = "^3.7.4"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
