[tool.poetry]
name = "deckgenerator"
version = "0.1.0"
description = ""
authors = ["Mikhail Budnikov <msh2481@mail.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
wordfreq = "^3.1.1"
openai = "^1.14.2"
beartype = "^0.17.2"
matplotlib = "^3.8.3"
numpy = "^1.26.4"
tqdm = "^4.66.2"
spacy = "^3.7.4"
scipy = "^1.12.0"
ipython = "^8.22.2"
soundfile = "^0.12.1"
genanki = "^0.13.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
